<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crypto_card"
    style="@style/Widget.Material3.CardView.Outlined"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:id="@+id/bitcoin_image_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/bitcoin_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/crypto_image"
                tools:src="@drawable/btc_img" />
        </LinearLayout>


        <TextView
            android:id="@+id/crypto_name"
            style="@style/TextViewPrimary"
            app:layout_constraintBottom_toTopOf="@+id/crypto_abbr"
            app:layout_constraintStart_toEndOf="@+id/bitcoin_image_linear"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/crypto_name_text" />

        <TextView
            android:id="@+id/crypto_abbr"
            style="@style/TextViewPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bitcoin_image_linear"
            app:layout_constraintTop_toBottomOf="@+id/crypto_name"
            tools:text="@string/crypto_abbr_text" />

        <LinearLayout
            android:id="@+id/linear_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/crypto_growth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/crypto_price_currency"
                style="@style/TextViewPrimary"
                android:padding="2dp"
                tools:text="@string/dollar" />

            <TextView
                android:id="@+id/crypto_price"
                style="@style/TextViewPrimary"
                tools:text="@string/crypto_price" />
        </LinearLayout>


        <TextView
            android:id="@+id/crypto_growth"
            style="@style/TextViewPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/growth_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_price"
            tools:text="@string/crypto_growth_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>