<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".view.cryptoDetails.CryptoDetailsFragment">

    <View
        android:id="@+id/line"
        style="@style/ViewLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btc_large_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/crypto_image"
                    tools:src="@drawable/btc_img_large" />

                <LinearLayout
                    android:id="@+id/detail_text_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/description" />

                    <TextView
                        android:id="@+id/description_text"
                        style="@style/TextViewPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/description_text" />

                    <TextView
                        style="@style/TextViewHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/categories" />

                    <TextView
                        android:id="@+id/categories_text"
                        style="@style/TextViewPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="34dp"
                        tools:text="@string/categories_text" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/loading_error_details"
            layout="@layout/content_loading_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
